// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default value constraints should process default constraints specified for parameters 1`] = `
"<div class="openapi">

# DefaultValueConstraints

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`text translate=no
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

### Query parameters

#|||
 **Name** 
|
 **Description** 
||

||
 limit {.openapi-table-parameter-name} 
|
 **Type:** number&lt;int32&gt;

Amount of search results to show<br>

*Default:*{.openapi-description-annotation} \`10\`
 
|||#

## Responses

<div class="openapi__response__code__204">

## 204 No Content

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
{}
\`\`\`


{% endcut %}


</div>

</div>
<!-- markdownlint-disable-file -->

</div>



[*Deprecated]: No longer supported, please use an alternative and newer version."
`;

exports[`Default value constraints should process default constraints specified in schema objects 1`] = `
"<div class="openapi">

# DefaultValueConstraints

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`text translate=no
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
{
    "role": "basic",
    "name": "Anonymous",
    "tags": [
        "blah"
    ],
    "age": 7
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Description** 
||

||
 age {.openapi-table-parameter-name} 
|
 **Type:** number



*Default:*{.openapi-description-annotation} \`7\`
 
||

||
 name {.openapi-table-parameter-name} 
|
 **Type:** string



*Default:*{.openapi-description-annotation} \`Anonymous\`
 
||

||
 role {.openapi-table-parameter-name} 
|
 **Type:** string

Role for the user being created

*Default:*{.openapi-description-annotation} \`basic\`

*Enum:*{.openapi-description-annotation} \`basic\`, \`admin\`
 
||

||
 tags {.openapi-table-parameter-name} 
|
 **Type:** string[]



*Default:*{.openapi-description-annotation} \`blah\`
 
|||#

</div>

## Responses

<div class="openapi__response__code__204">

## 204 No Content

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json translate=no
{}
\`\`\`


{% endcut %}


</div>

</div>
<!-- markdownlint-disable-file -->

</div>



[*Deprecated]: No longer supported, please use an alternative and newer version."
`;
